modifiche a public per la gestione della data

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
                 <thead class="table-dark">
                     <tr>                            
                         <th>Task</th>
+                        <th>Data</th> <!-- Colonna data aggiunta -->
                         <th>Completa</th>                            
                         <th>Elimina</th>                        
                     </tr>
@@ -28,6 +29,7 @@
                 <tbody id="listTable">
                     <tr>                            
                         <td>%TASK</td>
+                        <td>%DATE</td> 
                         <td><button id="COMPLETE_%ID" type="button">COMPLETA</button></td>                            
                         <td><button id="DELETE_%ID" type="button">ELIMINA</button></td>                                                    
                     </tr>
